err/gns3-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_cors'...
Listing './lib/python3.5/site-packages/aiohttp_cors-0.5.3.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gns3_server-2.1.2.egg-info'...
Listing './lib/python3.5/site-packages/gns3server'...
Listing './lib/python3.5/site-packages/gns3server/appliances'...
Listing './lib/python3.5/site-packages/gns3server/compute'...
Listing './lib/python3.5/site-packages/gns3server/compute/adapters'...
Listing './lib/python3.5/site-packages/gns3server/compute/builtin'...
Listing './lib/python3.5/site-packages/gns3server/compute/builtin/nodes'...
Listing './lib/python3.5/site-packages/gns3server/compute/docker'...
Listing './lib/python3.5/site-packages/gns3server/compute/docker/resources'...
Listing './lib/python3.5/site-packages/gns3server/compute/docker/resources/bin'...
Listing './lib/python3.5/site-packages/gns3server/compute/docker/resources/etc'...
Listing './lib/python3.5/site-packages/gns3server/compute/docker/resources/etc/udhcpc'...
Listing './lib/python3.5/site-packages/gns3server/compute/dynamips'...
Listing './lib/python3.5/site-packages/gns3server/compute/dynamips/adapters'...
Listing './lib/python3.5/site-packages/gns3server/compute/dynamips/nios'...
Listing './lib/python3.5/site-packages/gns3server/compute/dynamips/nodes'...
Listing './lib/python3.5/site-packages/gns3server/compute/iou'...
Listing './lib/python3.5/site-packages/gns3server/compute/iou/utils'...
Listing './lib/python3.5/site-packages/gns3server/compute/nios'...
Listing './lib/python3.5/site-packages/gns3server/compute/qemu'...
Listing './lib/python3.5/site-packages/gns3server/compute/virtualbox'...
Listing './lib/python3.5/site-packages/gns3server/compute/vmware'...
Listing './lib/python3.5/site-packages/gns3server/compute/vpcs'...
Listing './lib/python3.5/site-packages/gns3server/configs'...
Listing './lib/python3.5/site-packages/gns3server/controller'...
Listing './lib/python3.5/site-packages/gns3server/controller/gns3vm'...
Listing './lib/python3.5/site-packages/gns3server/controller/ports'...
Listing './lib/python3.5/site-packages/gns3server/handlers'...
Listing './lib/python3.5/site-packages/gns3server/handlers/api'...
Listing './lib/python3.5/site-packages/gns3server/handlers/api/compute'...
Listing './lib/python3.5/site-packages/gns3server/handlers/api/controller'...
Listing './lib/python3.5/site-packages/gns3server/schemas'...
Listing './lib/python3.5/site-packages/gns3server/symbols'...
Listing './lib/python3.5/site-packages/gns3server/templates'...
Listing './lib/python3.5/site-packages/gns3server/ubridge'...
Listing './lib/python3.5/site-packages/gns3server/utils'...
Listing './lib/python3.5/site-packages/gns3server/utils/asyncio'...
Listing './lib/python3.5/site-packages/gns3server/web'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.1.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.15.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/controller'...
Listing './lib/python3.5/site-packages/tests/controller/gns3vm'...
Listing './lib/python3.5/site-packages/typing-3.6.2.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/zipstream'...
Listing './lib/python3.5/site-packages/zipstream-1.1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
